# sober

./: .dockerignore  .env  .gitignore  .htmlignore  .lintstagedrc  .markdownlint.yaml  .prettierignore  .prettierrc  .stylelintrc  Dockerfile  README.md  TODO.md  biome.json  build.sh  compose.yaml  docker.sh  docs.sh  eslint.config.js  index.css  index.html  package.json  packages.sh  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.gitea/workflows/: build.yaml  check.yaml  push.yaml
.husky/: post-commit  pre-commit
backend/: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  README.md  api.py  build.sh  lint.sh  pyproject.toml  rxtrak.db  test.sh
backend/features/: api.test.feature  environment.py  since.feature
backend/features/steps/: api.test.py  schedule.py
docs/: README-backend.template.md  README-frontend.template.md  README.sh  README.template.md
frontend/: .dockerignore  .env.test  .htmlvalidate.json  .stylelintrc  Dockerfile  README.md  TODO.md  build.sh  index.css  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/api/: index.ts
frontend/src/components/Display/: index.css  index.tsx
frontend/src/components/Substances/: index.tsx
frontend/src/components/dashboard/: index.test.tsx
frontend/src/utils/: displayStore.ts  index.ts  jwt.ts  schemas.ts
frontend/src/utils/interfaces/: ICoin.ts  ICost.ts  IDisplay.ts  IFetchClient.ts  ISubstance.ts  ISubstanceDisplay.ts  IUser.ts
frontend/tests/components/Display/: index.test.tsx
frontend/tests/utils/: Helpers.ts  Matchers.ts  displayStore.test.ts  index.test.ts  jwt.test.ts  schemas.test.ts
frontend/tests/utils/interfaces/: ICoin.test.ts  ICost.test.ts  IDisplay.test.ts  IFetchClient.test.ts  ISubstance.test.ts  ISubstanceDisplay.test.ts  IUser.test.ts
patches/: @jarrodek%2Fpluralize@1.0.2.patch
src/: jest-dom.d.ts  main.tsx  setup.ts  vite-env.d.ts
src/components/coin/: index.test.tsx  index.tsx
src/components/cost/: index.test.tsx  index.tsx
src/components/dashboard/: index.css  index.test.tsx  index.tsx
src/components/display/: index.css  index.tsx
src/components/settings/: index.test.tsx  index.tsx
src/components/shared/: ISoberDate.ts  displayStore.ts  index.test.tsx  index.tsx  schemas.ts
src/components/shared/interfaces/: ICustomCloseButtonProps.ts  IDisplay.ts  ISoberDate.ts
test/components/display/: index.test.tsx
test/components/shared/: displayStore.test.ts  index.test.ts  schemas.test.ts
test/components/shared/interfaces/: ICoin.test.ts  ICost.test.ts  ICustomCloseButtonProps.test.ts  IDisplay.test.ts  ISoberDate.test.ts
test/shared/: displayStore.test.ts  index.test.ts  schemas.test.ts
test/shared/interfaces/: ICoin.test.ts  ICost.test.ts  IDisplay.test.ts  ISoberDate.test.ts
