[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sober-backend"
version = "1.0.0"
description = "Sober date/time calculator (Backend)"
license = "GPL-3.0-only"
authors = [
    {name = "Chris Post"}
]
keywords = ["sober", "sobriety", "tracker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment :: Mozilla",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Typing :: Typed"
]
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.127.0"
]
requires-python = ">= 3.14"

[project.urls]
GitHub = "https://github.com/chump29/sober"

[project.optional-dependencies]
dev = [
    "behave>=1.3.3",
    "pip-review>=1.3.0",
    "pylint>=4.0.4",
]

[tool.uv]
python-downloads = "manual"

[tool.hatch.build.targets.wheel]
packages = ["sober-backend"]
