[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11,<0.12"]

[project]
authors = [{ name = "Chris Post", email = "admin@postfmly.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment :: Mozilla",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Typing :: Typed",
]
dependencies = [
    "cachetools>=7.1.4",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.139.0",
    "nh3>=0.3.6",
    "peewee>=4.1.2",
    "pluralizer>=2.0.0",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
    "python-box>=7.4.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "semver>=3.0.4",
    "str2bool3>=1.3.0",
]
description = "Sobriety counter (Backend)"
keywords = ["sober", "sobriety", "time", "tracker", "counter"]
license = "GPL-3.0-only"
name = "sober-backend"
requires-python = ">=3.14"
version = "1.0.0"

[project.urls]
GitHub = "https://github.com/chump29/sober"

[project.optional-dependencies]
dev = [
    "behave>=1.3.3",
    "coverage>=7.15.0",
    "faker>=40.28.1",
    "pre-commit>=4.6.0",
    "pylint>=4.0.6",
    "types-behave>=1.3.0.20260408",
    "types-peewee>=4.0.8.20260630",
]

[tool.coverage.json]
output = "coverage/coverage.json"

[tool.coverage.report]
exclude_also = [
    #"__name__",
    #"DEBUG",
    #"except",
    #"get_day",
    #"if not m:",
    #"invalid_*",
    #"log",
    #"Path",
]
precision = 2
show_missing = true

[tool.coverage.run]
data_file = "coverage/.coverage"
omit = ["features/**/*.py"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.master]
ignore-paths = [".venv"]

[tool.pylint."messages control"]
disable = ["C0411"]

[tool.pylint.reports]
score = false

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
ignore = ["D203", "D212", "D400", "D415", "S101"]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FAST",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.uv]
python-downloads = "manual"
required-version = ">=0.11.28"

[tool.uv.build-backend]
namespace = true
source-exclude = [
    ".dockerignore",
    ".env*",
    ".pre-commit-config.yaml",
    ".python-version",
    ".ruff_cache/**/*",
    ".venv/**/*",
    "*.sh",
    "coverage/*",
    "db/*",
    "Dockerfile",
    "features/**/*",
    "README.md",
    "uv.lock",
]
